--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -19,7 +19,15 @@
 	border: 2px solid #3c3c3c;
 	box-sizing: border-box;
 }
-
+.tabletBox  {
+	width: 100%;
+	height: 135px;
+	background: #000000;
+	/* Dynamic */
+	border: 2px solid #3c3c3c;
+	box-sizing: border-box;
+	font-size:16px !important;
+}
 .renew-overlay {
 	height: 540px;
 	border: 2px solid #ffffff;
