--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -39,12 +39,34 @@
 	width: 35px;
 }
 
+.use-overlay {
+	height: 270px;
+	border: 2px solid #ffffff;
+	background-color: #3c3c3c;
+	position: absolute;
+	top: 135px;
+	left: 0;
+	z-index: 10;
+	width: 35px;
+}
+
 .renew-overlay-two {
 	height: 405px;
 	border: 2px solid #ffffff;
 	background-color: #3c3c3c;
 	position: absolute;
 	top: 675px;
+	left: 0;
+	z-index: 10;
+	width: 35px;
+}
+
+.use-overlay-two {
+	height: 405px;
+	border: 2px solid #ffffff;
+	background-color: #3c3c3c;
+	position: absolute;
+	top: 405px;
 	left: 0;
 	z-index: 10;
 	width: 35px;
@@ -64,6 +86,20 @@
 	width: 230px;
 }
 
+.use-overlay-vertext {
+	transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	-webkit-transform: rotate(-90deg);
+	position: absolute; 
+	color: rgb(255, 255, 255);
+	font-size: 16px;
+	font-weight: 600;
+	text-align: center;
+	top: 130px;
+	left: -100px;
+	width: 230px;
+}
+
 
 .renew-overlay-vertext-two {
 	transform: rotate(-90deg);
@@ -78,6 +114,20 @@
 	left: -100px;
 	width: 230px;
 }
+.use-overlay-vertext-two {
+	transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	-webkit-transform: rotate(-90deg);
+	position: absolute; 
+	color: rgb(255, 255, 255);
+	font-size: 16px;
+	font-weight: 600;
+	text-align: center;
+	top: 185px;
+	left: -100px;
+	width: 230px;
+}
+
 
 
 
