--- a/src/components/PrimaryContent/PrimaryContent.css
+++ b/src/components/PrimaryContent/PrimaryContent.css
@@ -520,6 +520,13 @@
 	font-size: 1.3em;
 } */
 
+@media only screen and (max-width: 1114) and (min-width: 1110){ 
+  /* .buyPrimaryCard {
+    width: 120%;
+  }
+   */
+
+ }
 
 
 /* .formattedTarget{
