--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -435,3 +435,38 @@
     float:left;
     /* border: 1px solid red; */
 }
+
+
+/*
+iPad Pro 10.5 inch , 1112px
+*/
+ 
+@media only screen and (max-width: 1116px) and (min-width: 1025px){
+    .detailTitle2{
+        width: 30%; 
+        font-size: 20px;
+         
+     }
+    }
+     
+    /*
+    iPad Pro 11.5 inch, 1194px
+    */
+    @media only screen and (max-width: 1198px) and (min-width: 1117px){
+        .detailTitle2{
+            width: 25%; 
+            font-size: 20px;
+             
+         }
+    }
+     
+    /*
+    iPad Pro 12.9 inch, 1366px
+    */
+    @media only screen and (max-width: 1370px) and (min-width: 1199px){
+        .detailTitle2{
+            width: 25%; 
+            font-size: 20px;
+             
+         }
+    }
