--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -475,3 +475,14 @@ iPad Pro 10.5 inch , 1112px
              
          }
     }
+
+
+    .iconfooter{
+        display: 'block';
+        padding-left: 500px;
+         width: '100%'
+    }
+    .rtbIconFooter{
+        width: 50px;
+         height: 50px;
+    }
