--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -5,8 +5,8 @@
     padding-top: 14px;
     /* background-color: white; */
     background-color: transparent;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 10px;
+    /* padding-right: 15px; */
     float: right;
     color: white;
 }
@@ -40,8 +40,7 @@
     float: right;
     padding: 10px 10px 10px 20px;
     border-radius: 3px;
-    /* border-left:10px solid #3C3C3C;
-    background-color: white; */
+
 }
 
 .stats{
