--- a/src/components/MobileComponents/FitlerPage/FilterPage.css
+++ b/src/components/MobileComponents/FitlerPage/FilterPage.css
@@ -1,7 +1,6 @@
 .filterMobileContainer {
     background-color: #3c3c3c;
     width: 100%;
-    height: 100%;
     color: white;
     -webkit-animation: slideFilter 1s forwards;
     -webkit-animation-delay: 2s;
@@ -21,6 +20,17 @@
     transition: height 2s;
     
 }
+.mobilePrimaryKPIFilters{
+    margin-top: 230px;
+    color: white;
+    font-weight: bold;
+    padding:0px;
+    width: 100%
+    }
+.mobileSubFilter{
+     padding-left: 0px;
+     padding-right:0px;   
+    }
 @-webkit-keyframes slideFilter {
     100% { left: 0; }
 }
@@ -39,10 +49,20 @@
     margin-left: 15px;
     margin-right: 15px;
 }
-
-
+.defaultFilters{
+    padding:0px;
+}
+.mobileSubFilterContainer{
+    padding-left: 0px;
+    padding-right: 0px
+    
+}
+.mobileSubFilterHeader{
+    margin-top: 25px;
+}
 .filterListMobile {
     display: inline;
+    padding-left:0px;
     list-style: none;
 }
 
