--- a/src/components/MobileComponents/FitlerPage/FilterPage.css
+++ b/src/components/MobileComponents/FitlerPage/FilterPage.css
@@ -25,11 +25,14 @@
     color: white;
     font-weight: bold;
     padding:0px;
-    width: 100%
+    width: 100%;
+    margin-bottom:10px;
     }
 .mobileSubFilter{
      padding-left: 0px;
      padding-right:0px;   
+    margin-bottom:10px;
+
     }
 @-webkit-keyframes slideFilter {
     100% { left: 0; }
@@ -86,3 +89,6 @@
 
 
 
+  .mobileDropDownStyle{
+    margin-bottom:10px;
+  } 
