--- a/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
+++ b/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
@@ -357,3 +357,9 @@
     padding-top: 4px;
 }
 
+.boldFont{
+    font-weight: 800;
+    border-top: 1px solid #a4a4a4;
+    border-bottom:1px solid #a4a4a4;
+    color:white !important;
+}
