--- a/src/components/KendoDialog/KendoDialog.css
+++ b/src/components/KendoDialog/KendoDialog.css
@@ -177,18 +177,54 @@
 }
 
 
-.saveButton{
+.saveButton,
+.resetButton{
     background-color:#1573e6;
+    /* background-color: black; */
     border-radius:18px;
-    width: 133px;
+    width: 100px;
     height: 36px;
     color: #ffffff; 
-    padding:5px;
+    padding: 5px;
     font-size:16px;
     border:none;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin-right: 5px;
     display: block;
+    float: right;
+    /* transition: background-color 0.5s; */
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 40% 40%;
+}
+
+.saveButton{
+    /* background-image: url('../../assets/images/save-regular.svg'); */
+    background-size: 50% 50%;
+    
+}
+
+.resetButton{
+    /* background-image: url('../../assets/images/sync-solid.svg'); */
+    
+}
+.saveButton:hover,
+.resetButton:hover{
+    background-color: rgb(9, 102, 196);
+    
+    box-shadow: 0 0 10px rgba(0,0,0,1);
+    font-weight: bolder !important;
+    
+
+}
+
+.saveButton:hover{
+    /* background-image: url('../../assets/images/save-dark.svg'); */
+}
+
+.resetButton:hover{
+    /* background-image: url('../../assets/images/sync-solid-dark.svg'); */
 }
 
 .filterList {
