--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -41,7 +41,8 @@
 }
 
 .use-overlay {
-	height: 272px;
+	/* height: 272px; */
+	height: 408px;
 	border: 2px solid #ffffff;
 	background-color: #3c3c3c;
 	position: absolute;
@@ -105,7 +106,7 @@
 	font-size: 16px;
 	font-weight: 600;
 	text-align: center;
-	top: 130px;
+	top: 180px;
 	left: -100px;
 	width: 230px;
 }
@@ -864,7 +865,8 @@
  
 /*Use Overlay */
 .use-overlay {
-    height: 190px;
+	/* height: 190px; */
+	height: 285px;
     border: 2px solid #ffffff;
     background-color: #3c3c3c;
     position: absolute;
@@ -904,7 +906,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    top: 80px;
+    top: 110px;
     left: -100px;
     width: 230px;
 }
@@ -1010,7 +1012,7 @@
 }
 /*Use Overlay */
 .use-overlay {
-    height: 190px;
+    height: 285px;
     border: 2px solid #ffffff;
     background-color: #3c3c3c;
     position: absolute;
@@ -1049,7 +1051,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    top: 80px;
+    top: 110px;
     left: -100px;
     width: 230px;
 }
