--- a/src/components/SecondaryContent/SecondaryContent.css
+++ b/src/components/SecondaryContent/SecondaryContent.css
@@ -64,7 +64,8 @@
 }
 
 .use-overlay-two {
-	height: 541px;
+	/* height: 541px; */
+	height: 408px;
 	border: 2px solid #ffffff;
 	background-color: #3c3c3c;
 	position: absolute;
@@ -74,11 +75,13 @@
 	width: 35px;
 }
 .use-overlay-three {
-	height: 135px;
+	/* height: 135px; */
+	height: 408px;
 	border: 2px solid #ffffff;
 	background-color: #3c3c3c;
 	position: absolute;
-	top: 541px;
+	/* top: 541px; */
+	top: 405px;
 	left: 0;
 	z-index: 10;
 	width: 35px;
@@ -106,7 +109,7 @@
 	font-size: 16px;
 	font-weight: 600;
 	text-align: center;
-	top: 180px;
+	top: 260px;
 	left: -100px;
 	width: 230px;
 }
@@ -134,7 +137,8 @@
 	font-size: 16px;
 	font-weight: 600;
 	text-align: center;
-	top: 265px;
+	/* top: 265px; */
+	top: 200px;
 	left: -100px;
 	width: 230px;
 }
@@ -148,7 +152,7 @@
 	font-size: 16px;
 	font-weight: 600;
 	text-align: center;
-	top: 55px;
+	top: 180px;
 	left: -100px;
 	width: 230px;
 }
@@ -876,7 +880,9 @@
     width: 35px;
 }
 .use-overlay-two {
-    height: 372px;
+	/* height: 372px; */
+	height: 279px;
+	
     border: 2px solid #ffffff;
     background-color: #3c3c3c;
     position: absolute;
@@ -886,11 +892,11 @@
     width: 35px;
 }
 .use-overlay-three {
-    height: 96px;
+    height: 297px;
     border: 2px solid #ffffff;
     background-color: #3c3c3c;
     position: absolute;
-    top: 422px;
+    top: 320px;
     left: 0;
     z-index: 10;
     width: 35px;
@@ -906,7 +912,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    top: 110px;
+    top: 180px;
     left: -100px;
     width: 230px;
 }
@@ -921,7 +927,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    top: 185px;
+    top: 130px;
     left: -100px;
     width: 230px;
 }
@@ -935,7 +941,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    top: 40px;
+    top: 130px;
     left: -100px;
     width: 230px;
 }
@@ -1022,7 +1028,8 @@
     width: 30px;
 }
 .use-overlay-two {
-    height: 372px;
+	/* height: 372px; */
+	height: 282px;
     border: 2px solid #ffffff;
     background-color: #3c3c3c;
     position: absolute;
@@ -1032,11 +1039,11 @@
     width: 30px;
 }
 .use-overlay-three {
-    height: 96px;
+    height: 282px;
     border: 2px solid #ffffff;
     background-color: #3c3c3c;
     position: absolute;
-    top: 422px;
+    top: 332px;
     left: 0;
     z-index: 10;
     width: 30px;
@@ -1051,7 +1058,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    top: 110px;
+    top: 180px;
     left: -100px;
     width: 230px;
 }
@@ -1065,7 +1072,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    top: 185px;
+    top: 135px;
     left: -100px;
     width: 230px;
 }
@@ -1078,7 +1085,7 @@
     font-size: 16px;
     font-weight: 600;
     text-align: center;
-    top: 40px;
+    top: 120px;
     left: -100px;
     width: 230px;
 }
