Table wrapping , removed QTDs and Reordered QTDS, coloring of vsQRF, Product Week data

--- a/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
+++ b/src/components/SummaryViewDetails/DetailBreakdown/DetailPanelBar/DetailPanelBar.css
@@ -230,6 +230,7 @@
 .weekGeoHeader{
     text-align:  left !important;
     padding-left: 15px;
+    white-space: nowrap;
 }
 .weekMaHeader{
     /* text-align:  right !important; */
