--- a/src/components/MobileComponents/FitlerPage/FilterPage.css
+++ b/src/components/MobileComponents/FitlerPage/FilterPage.css
@@ -23,17 +23,19 @@
     
 }
 .mobilePrimaryKPIFilters{
-    margin-top: 230px;
+    margin-top: 280px;
     color: white;
     font-weight: bold;
     padding:0px;
     width: 100%;
     margin-bottom:10px;
     }
+
 .mobileSubFilter{
      padding-left: 0px;
      padding-right:0px;   
     margin-bottom:10px;
+    
 
     }
 @-webkit-keyframes slideFilter {
@@ -58,6 +60,7 @@
 .defaultFilters{
     padding:0px;
     margin-bottom: 10px;
+    
 
 }
 .mobileSubFilterContainer{
@@ -98,47 +101,19 @@
     margin-bottom:10px;
   } 
 
-  .mobileButton_top{
-      /* position: fixed; */
-      /* display: block; */
-      /* left: -10px;
-      top: 55px; */
-      color: white !important;
-      /* background: transparent; */
-      text-align:center;
-      border: 1px solid white !important;
-      /* border: none; */
-      border-radius: 30px;
-      height: 2.25em;
-      width:80%;
-      margin-left: 10%;
-      margin-right:5%;
-      /* margin-left:60%; */
-      margin-top: 10px;
-      background-color: rgba(13, 135, 253, 1);
-      z-index: 100;
-      margin-bottom:10px;
-      
-  }
-
-
-  .mobileButton_scrolled{
-    /* position: fixed; */
-    top: 100px;
-    left: 0px;
+  .mobileButton{
     color: white !important;
-    /* background: transparent; */
+    background: transparent;
     text-align:center;
-    /* border: 1px solid white !important; */
-    border: none;
+    
+    border: 1px solid white !important;
     border-radius: 30px;
-    width:60%;
-    margin:auto;
-    margin-left:25%;
-    margin-right:20%;
-    background-color: rgba(13, 135, 253, .5);
-    z-index: 100;
+    height: 2.25em;
+    width: 80%;
+    margin-top: 10px;
+    margin-left: 10%;
+    margin-right: 5%;
+    margin-bottom: 10px;
+    background-color: rgb(11, 132, 252);
     
 }
-
- 
