--- a/src/components/SummaryViewDetails/SummaryViewDetails.css
+++ b/src/components/SummaryViewDetails/SummaryViewDetails.css
@@ -9,6 +9,7 @@
     /* padding-right: 15px; */
     float: right;
     color: white;
+    /* position: relative; */
 }
 
 .row {
@@ -485,3 +486,329 @@ iPad Pro 10.5 inch , 1112px
         width: 50px;
          height: 50px;
     }
+
+    .correlationButton{
+        background-color: #0b84fc;
+        color: white;
+        height: 50px;
+        
+        
+        width: 150px;
+        border: 4px solid orange;
+        border-radius: 20px;
+        outline: none;
+    }
+
+    .correlationButton:hover{
+        border: 4px solid greenyellow;
+        font-size: 1.2em;
+        
+    }
+
+    .correlationButtonSlider{
+        margin: 0;
+        margin-left: -20px;
+        display: inline-block;
+        padding: 0;
+        width: 150px;
+        height: 70px;
+        color: black;
+    }
+    .correlationButtonLeft{
+        height: 35px;
+        width: 150px;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+
+    }
+    .correlationButtonRight{
+        height: 35px;
+        width: 150px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+    }
+
+    .correlationButtonSelection{
+        background-color: white;
+        color: black;
+        text-decoration: underline;
+        outline: none;
+    }
+    .correlationButtonNonSelection{
+        background-color: black;
+        color: white;
+        outline: none;
+    }
+
+    .correlationPanel{
+        width: 80%;
+        margin: auto;
+        margin-left: 5%;
+        margin-right: 5%;
+        background-color: white;
+        height: 600%;
+        z-index: 400
+    }
+
+    .correlationPanelBar{
+        
+        padding-top: 50px;
+        margin-top: 300px;
+        margin-left: 30px;
+    }
+
+  
+    .sliderListContainer{
+        padding: 30px 0 30px 0;
+
+    }
+
+    .sliderListContainer .sliderBlock{
+        margin-top: 20px;
+    }
+
+    .sliderListContainer .k-slider{
+  
+        margin-right: 30px;
+        margin-left: 30px;
+        background-color: rgb(223, 212, 212) !important;
+        border-radius: 20px;
+        width: 30px;
+        
+      }
+      
+        
+      .sliderListContainer .k-slider .k-button{
+        background: transparent;
+        background-color: rgb(9, 159, 228) !important;
+        color: white;
+        
+      }
+      
+      .sliderListContainer .k-i-arrow-s {
+        transform: rotate(0deg) !important
+    }
+
+      .sliderListContainer .k-button:active{
+        background-color: rgb(28, 97, 201) !important;
+      }
+      
+      .sliderListContainer .k-slider-selection{
+          background-color: rgb(21, 21, 77);
+      }
+      .sliderListContainer .k-slider-items{
+        color: black;
+        
+      }
+      
+      .sliderListContainer .k-draghandle{
+        border-color: white;
+        background-color: rgb(8, 80, 175) !important;
+        
+      }
+      .sliderListContainer .sliderTitle{
+        /* color: grey; */
+        color: rgb(187, 181, 181);
+       
+        
+        width: 100px;
+        font-size: 1em !important;
+        text-align: center;
+        white-space: pre-wrap;
+        margin-top: 10px;
+      
+      }
+
+      
+     .sliderListContainer{
+         
+         /* background-color: black; */
+        /* margin:auto;
+        margin-left: 10%;
+        margin-right: 10%; */
+        /* background-color: rgb(247, 236, 236); */
+        border-radius: 4px;
+        /* text-align: center; */
+        width: 100%;
+        display: flex;
+        justify-content: center;
+     }
+     .sliderBlock{
+         /* display: inline-block; */
+         /* border: 1px solid grey; */
+         margin-left: 5%;
+         
+     }
+
+     .predictButton button{
+         width: 50%;
+         height: 50px;
+         background-color: rgb(9, 159, 228);
+         border-radius: 40px;
+         outline: none;
+         color: white;
+         /* border: 2px solid orange; */
+         
+     }
+
+     .predictButton button:active{
+         background-color: rgb(28, 97, 201) !important;
+         outline: none;
+         border: 2px solid greenyellow;
+     }
+     .predictButton{
+         margin-top: 40px;
+         display: flex;
+         justify-content: center;
+     }
+
+     .sliderValue{
+         width: 100%;
+         text-align: center;
+         border: 1px solid black;
+         border-bottom-left-radius: 40%;
+         border-bottom-right-radius: 40%;
+         border-top-left-radius: 5px;
+         border-top-right-radius: 5px;
+         margin-left: -5px;
+         background-color: beige;
+     }
+     .predictComponent{
+         /* background-color: rgb(247, 236, 236); */
+         border: 1px solid #3d3d3d;
+         border-radius: 5px;
+         /* background-color: silver; */
+         
+         
+         
+         
+     }
+
+     .predictedValueContainer{
+      
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+      
+         }
+
+    .predictedValuePanelGreen{
+        margin-left:20px;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        /* box-shadow: 0 0 10px 10px rgb(189, 184, 184); */
+        box-shadow: 0 0 50px 15px greenyellow;
+        color: rgb(63, 187, 63);
+        display: flex;
+        justify-content: center;
+    }
+
+    .predictedValuePanelRed{
+        
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        /* box-shadow: 0 0 10px 10px rgb(189, 184, 184); */
+        box-shadow: 0 0 50px 15px salmon;
+        color: red;
+        display: flex;
+        justify-content: center;
+    }
+    .predictedValueText{
+        margin-top: 30%;
+        /* color:white; */
+        font-size: 2em;
+        
+
+    }
+
+    .correlationAnalysis{
+        margin-top: 20px;      
+       margin-bottom: 50px;
+    }
+
+    .correlationAnalysis th{
+        font-size: .8em;
+        border: 1px solid black;
+        border-collapse: collapse;
+        padding: 8px;
+        text-align: center;
+        color: white;
+        background-color: #3d3d3d;
+        border-left: none;
+        border-right:none;
+    }
+
+    .correlationAnalysis td:nth-child(1){
+        font-size: .8em;
+        /* border: 1px solid #fbfbfb; */
+        border: 1px solid #3d3d3d;
+        border-collapse: collapse;
+        padding: 8px;
+        padding-left: 20px;
+        padding-right: 20px;
+        text-align: left;
+        color: white;
+        
+        /* background-color: #3d3d3d; */
+    }
+
+    .correlationAnalysis td:nth-child(2){
+        width: 500px;
+    }
+
+    .correlationAnalysis td{
+        border: 1px solid #3d3d3d;
+        border-collapse: collapse;
+        padding: 8px;
+        text-align: center;
+        color: white;
+
+    }
+
+    .sliderNumericText{
+        width: 80px !important;
+        font-size: 1.5em !important;
+        border: none ;
+        border-bottom: 1px solid #099fe4 ;/*#d4cbcb;*/
+       text-align: center;
+       margin-left: 5px;
+       
+
+    }
+
+    .sliderNumericText .k-input{
+        
+        text-align:center;
+        color: #d4cbcb !important;
+        background-color: #202020 !important;
+        
+        
+        
+    }
+    
+    .k-slider-wrap{
+        margin-top: 20px;
+    }
+
+    .miniTutorial{
+        font-size: .7em;
+        background-color: #f4c150;
+        color: black;
+        margin-bottom: 70px;
+        text-align: center;
+        
+    }
+
+    .showImportance{
+        font-size: 1.2em;
+        font-weight: bolder;
+    }
+    
+    
+        
+
+      
+
+  
